--- a/_posts/2020-12-07-r2dii-analysis-0-1-2-is-now-on-cran/r2dii-analysis-0-1-2-is-now-on-cran.Rmd
+++ b/_posts/2020-12-07-r2dii-analysis-0-1-2-is-now-on-cran/r2dii-analysis-0-1-2-is-now-on-cran.Rmd
@@ -54,7 +54,7 @@ library(r2dii.analysis)
 Let's also calculate some demo data-frames, that we can use to explain the bugfixes:
 
 ```{r}
-validated_matched <- match_name(loanbook_demo, ald_demo) %>% 
+validated_matched <- match_name(loanbook_demo, ald_demo) %>%
   prioritize()
 
 # loan weighted portfolio-level results
@@ -63,7 +63,7 @@ portfolio_market_share_targets <- target_market_share(
   ald_demo,
   scenario_demo_2020,
   region_isos_demo
-  )
+)
 
 # unweighted company-level results
 company_market_share_targets <- target_market_share(
@@ -73,7 +73,7 @@ company_market_share_targets <- target_market_share(
   region_isos_demo,
   by_company = TRUE,
   weight_production = FALSE
-  )
+)
 ```
 
 ### r2dii.analysis 0.1.2
@@ -87,19 +87,19 @@ There are a few major fixes in this release of r2dii.analysis, in particular to 
 Below, I show that this is now the case for results at the level of both portfolios and companies (at least to 10 significant digits; further digits may be off due to rounding errors):
 
 ```{r}
-portfolio_sum <- portfolio_market_share_targets %>% 
-  group_by(sector, metric, region, year) %>% 
+portfolio_sum <- portfolio_market_share_targets %>%
+  group_by(sector, metric, region, year) %>%
   summarize(share_sum = sum(technology_share), .groups = "drop")
 
 # true for all, to 10 significant digits
-all(round(portfolio_sum$share_sum, 10) == 1) 
+all(round(portfolio_sum$share_sum, 10) == 1)
 
-company_sum <- company_market_share_targets %>% 
-  group_by(sector, metric, region, year, name_ald) %>% 
+company_sum <- company_market_share_targets %>%
+  group_by(sector, metric, region, year, name_ald) %>%
   summarize(share_sum = sum(technology_share), .groups = "drop")
 
 # true for all, to 10 significant digits
-all(round(company_sum$share_sum, 10) == 1) 
+all(round(company_sum$share_sum, 10) == 1)
 ```
 
 #### target_sda()
@@ -110,28 +110,28 @@ The convergence targets are now correctly calculated to the final year present i
 
 ``` {r}
 matched <- tibble::tribble(
-  ~id_loan, ~loan_size_outstanding, ~loan_size_outstanding_currency, ~loan_size_credit_limit, ~loan_size_credit_limit_currency, ~id_2dii,            ~level, ~score, ~sector,   ~name_ald, ~sector_ald,
-  "L1",                      1,                           "EUR",                       2,                            "EUR",    "UP1", "ultimate_parent",      1, "steel", "company a",     "steel"
+  ~id_loan, ~loan_size_outstanding, ~loan_size_outstanding_currency, ~loan_size_credit_limit, ~loan_size_credit_limit_currency, ~id_2dii, ~level, ~score, ~sector, ~name_ald, ~sector_ald,
+  "L1", 1, "EUR", 2, "EUR", "UP1", "ultimate_parent", 1, "steel", "company a", "steel"
 )
 
 # an ALD file with values only between 2020 and 2030
 ald <- tibble::tribble(
   ~name_company, ~sector, ~technology, ~year, ~production, ~emission_factor, ~plant_location, ~is_ultimate_owner,
-  "company a", "steel",     "steel",  2020,           1,           1.5,            "DE",               TRUE,
-  "company a", "steel",     "steel",  2025,           1,           1.5,            "DE",               TRUE,
-  "company a", "steel",     "steel",  2030,           1,           1.5,            "DE",               TRUE,
-  "company b", "steel",     "steel",  2020,           1,           2.5,            "DE",               TRUE,
-  "company b", "steel",     "steel",  2025,           1,           2.5,            "DE",               TRUE,
-  "company b", "steel",     "steel",  2030,           1,           2.5,            "DE",               TRUE
+  "company a", "steel", "steel", 2020, 1, 1.5, "DE", TRUE,
+  "company a", "steel", "steel", 2025, 1, 1.5, "DE", TRUE,
+  "company a", "steel", "steel", 2030, 1, 1.5, "DE", TRUE,
+  "company b", "steel", "steel", 2020, 1, 2.5, "DE", TRUE,
+  "company b", "steel", "steel", 2025, 1, 2.5, "DE", TRUE,
+  "company b", "steel", "steel", 2030, 1, 2.5, "DE", TRUE
 )
 
 # a scenario file with targets at 2050
 co2_scenario <- tibble::tribble(
-  ~scenario_source, ~scenario, ~sector,  ~region, ~year, ~emission_factor,              ~emission_factor_unit,
-  "etp_2017",    "b2ds", "steel", "global",  2020, 2, "tonnes of CO2 per tonne of steel",
-  "etp_2017",    "b2ds", "steel", "global",  2025, 1.9, "tonnes of CO2 per tonne of steel",
-  "etp_2017",    "b2ds", "steel", "global",  2030, 1.8, "tonnes of CO2 per tonne of steel",
-  "etp_2017",    "b2ds", "steel", "global",  2050,      0.25, "tonnes of CO2 per tonne of steel",
+  ~scenario_source, ~scenario, ~sector, ~region, ~year, ~emission_factor, ~emission_factor_unit,
+  "etp_2017", "b2ds", "steel", "global", 2020, 2, "tonnes of CO2 per tonne of steel",
+  "etp_2017", "b2ds", "steel", "global", 2025, 1.9, "tonnes of CO2 per tonne of steel",
+  "etp_2017", "b2ds", "steel", "global", 2030, 1.8, "tonnes of CO2 per tonne of steel",
+  "etp_2017", "b2ds", "steel", "global", 2050, 0.25, "tonnes of CO2 per tonne of steel",
 )
 
 # SDA portfolio-level results
@@ -139,17 +139,18 @@ sda_targets <- target_sda(
   matched,
   ald,
   co2_scenario
-) 
+)
 
 ggplot(
-  data = sda_targets, 
+  data = sda_targets,
   mapping = aes(
-    x = year, 
-    y = emission_factor_value, 
-    color = emission_factor_metric)
+    x = year,
+    y = emission_factor_value,
+    color = emission_factor_metric
+  )
 ) +
   geom_line() +
-  facet_wrap(~ sector)
+  facet_wrap(~sector)
 ```
 
 ## Acknowledgements
