Revert "TO REVERT remove header"
This reverts commit dc179d5d76f9fd3fbd6014c7ea1b281cebd5a200.

--- a/_posts/2020-12-07-r2dii-analysis-0-1-3-is-now-on-cran/r2dii-analysis-0-1-3-is-now-on-cran.Rmd
+++ b/_posts/2020-12-07-r2dii-analysis-0-1-3-is-now-on-cran/r2dii-analysis-0-1-3-is-now-on-cran.Rmd
@@ -1,3 +1,22 @@
+---
+title: "r2dii.data 0.1.6, r2dii.match 0.0.7 and r2dii.analysis 0.1.2 are now on CRAN"
+description: |
+  Squashing bugs before the holidays.
+author:
+  - name: Jackson Hoffart
+    url: https://github.com/jdhoffa
+base_url: https://2degreesinvesting.github.io/
+date: 2020-12-07
+output: 
+  distill::distill_article:
+    toc: true
+    toc_depth: 3
+    self_contained: true
+categories:
+  - r2dii
+  - package
+---
+
 
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(
