--- a/_posts/2021-06-18-r2diidata-020/r2diidata-020.Rmd
+++ b/_posts/2021-06-18-r2diidata-020/r2diidata-020.Rmd
@@ -14,7 +14,7 @@ output:
     self_contained: true
 categories:
   - r2dii
-  - software development
+  - package
   - release
 preview: preview.jpg
 twitter:
