--- a/_posts/2020-08-14-r2dii-data-0-1-2-and-r2dii-match-0-0-4-are-now-on-cran/r2dii-data-0-1-2-and-r2dii-match-0-0-4-are-now-on-cran.Rmd
+++ b/_posts/2020-08-14-r2dii-data-0-1-2-and-r2dii-match-0-0-4-are-now-on-cran/r2dii-data-0-1-2-and-r2dii-match-0-0-4-are-now-on-cran.Rmd
@@ -14,7 +14,7 @@ output:
     self_contained: true
 categories:
   - r2dii
-  - software development
+  - package
   - release
 preview: preview.jpg
 twitter:
