--- a/_posts/2021-10-22-workflow-to-release-an-r-package-to-cran/workflow-to-release-an-r-package-to-cran.Rmd
+++ b/_posts/2021-10-22-workflow-to-release-an-r-package-to-cran/workflow-to-release-an-r-package-to-cran.Rmd
@@ -32,7 +32,7 @@ knitr::opts_chunk$set(
 
 The goal of this post is to help you release an R package to CRAN. It works
 whether you use the GitHub workflow or the Gitflow workflow
-([video](https://youtu.be/3glCxjn7xnU)).
+([video](https://youtu.be/nRV6oFmn_uM)).
 
 ### Prepare for release
 
