--- a/_posts/2021-10-22-workflow-to-release-an-r-package-to-cran/workflow-to-release-an-r-package-to-cran.Rmd
+++ b/_posts/2021-10-22-workflow-to-release-an-r-package-to-cran/workflow-to-release-an-r-package-to-cran.Rmd
@@ -32,7 +32,8 @@ knitr::opts_chunk$set(
 
 The goal of this post is to help you release an R package to CRAN. It works
 whether you use the [GitHub
-workflow](https://guides.github.com/introduction/flow/) or the [Gitflow
+workflow](https://guides.github.com/introduction/flow/)
+([video](https://youtu.be/WuB-RV7tigc)) or the [Gitflow
 workflow](https://nvie.com/posts/a-successful-git-branching-model/)[^6]
 ([video](https://youtu.be/y6wY9ERBA4I)).
 
