--- a/_posts/2020-06-23-github-and-rstudio/2020-06-23-github-and-rstudio.Rmd
+++ b/_posts/2020-06-23-github-and-rstudio/2020-06-23-github-and-rstudio.Rmd
@@ -12,8 +12,8 @@ output:
   toc_depth: 3
   self_contained: true
 categories:
-  - other
   - community
+  - onboarding
 preview: preview.jpg
 twitter:
   site: "@mauro_lepore"
