--- a/_posts/2020-07-25-gh-flow/gh-flow.Rmd
+++ b/_posts/2020-07-25-gh-flow/gh-flow.Rmd
@@ -12,7 +12,7 @@ output:
     toc: true
     self_contained: true
 categories:
-  - other
+  - workflow
   - community
 preview: preview.jpg
 twitter:
